--- a/public/_shared/header.jade
+++ b/public/_shared/header.jade
@@ -1,4 +1,4 @@
 header(role="header", class="top-header")
-	h1
+	h1(itemprop="name")
 		a(href="/", rel="root") Eli Gundry
-	h2 Full stack web developer with a love of web standards
+	h2(itemprop="description") Full stack web developer with a love of web standards
