--- a/public/assets/css/resume.less
+++ b/public/assets/css/resume.less
@@ -1,7 +1,7 @@
 #resume_new main,
 #resume main {
 	h2 {
-		margin-bottom: 0;
+		margin-bottom: 5px;
 
 		&:after {
 			border-bottom: @divider;
@@ -18,10 +18,11 @@
 
 	h3 {
 		margin-bottom: -4px;
+		margin-top: .5em;
 
 		sup {
 			font-size: .6em;
-			top: -1em;
+			top: -.75em;
 		}
 	}
 
