--- a/public/blog/_blog-layout-loop.jade
+++ b/public/blog/_blog-layout-loop.jade
@@ -7,9 +7,9 @@ html(lang="en-us")
 		else
 			title #{ title }
 		if description
-			meta(name="description", content="#{ description }")
+			meta(name="description", content=description)
 		!= partial("../_shared/meta")
-	body(id="#{ current.source }", class="blog-loop", itemscope, itemtype="https://schema.org/Person")
+	body(id=current.source, class="blog-loop", itemscope, itemtype="https://schema.org/Person")
 		!= partial("../_shared/header")
 		!= partial("../_shared/nav")
 
