--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -7,9 +7,9 @@ html(lang="en-us")
 		else
 			title #{ title }
 		if description
-			meta(name="description", content="#{ description }")
+			meta(name="description", content=description)
 		else
-			meta(name="description", content="#{ site_description }")
+			meta(name="description", content=site_description)
 		!= partial("_shared/meta")
 	body(id=current.source, itemscope, itemtype="https://schema.org/Person")
 		!= partial("_shared/header")
