Adds missing periods on resume

--- a/public/resume.ejs
+++ b/public/resume.ejs
@@ -50,7 +50,7 @@
 	</ul>
 </div>
 
-<div itemtype="http://schema.org/Organization" itemscope class="resume-hide">
+<div itemtype="http://schema.org/Organization" itemscope>
 	<h3 itemprop="name">
 		<a href="http://www.kent.edu" itemprop="url">
 			Kent State University
@@ -65,7 +65,7 @@
 	<ul itemprop="description">
 		<li>
 			Helped provide help desk support for
-			<a href="http://www.kent.edu/CAS/">Kent State's College of Arts and Sciences</a>
+			<a href="http://www.kent.edu/CAS/">Kent State's College of Arts and Sciences</a>.
 		</li>
 	</ul>
 </div>
@@ -85,11 +85,11 @@
 			Used <a href="http://php.net">PHP</a> with the
 			<a href="http://www.yiiframework.com">Yii Framework</a>
 			to develop web applications and
-			<a href="https://en.wikipedia.org/wiki/Representational_state_transfer">RESTful APIs</a>
+			<a href="https://en.wikipedia.org/wiki/Representational_state_transfer">RESTful APIs</a>.
 		</li>
 		<li>
 			Worked in a remote environment using agile development practices
-			using <a href="http://www.redmine.org">RedMine</a>
+			using <a href="http://www.redmine.org">RedMine</a>.
 		</li>
 	</ul>
 </div>
@@ -110,12 +110,12 @@
 			<a href="http://framework.zend.com">Zend Framework</a>
 			to contribute to <a href="https://prooflab.us">Prooflab</a>,
 			<a href="http://gomedia.us">Go Media's</a> project management web
-			application
+			application.
 		</li>
 		<li>
 			Developed the <a href="http://2012.wmcfest.com">Weapons of Mass
 			Creation Festival 2012</a>
-			website using <a href="http://wordpress.org">WordPress</a>
+			website using <a href="http://wordpress.org">WordPress</a>.
 		</li>
 	</ul>
 </div>
@@ -137,11 +137,11 @@
 			Updated content for <a href="http://www.clevelandmagazine.com">
 			Cleveland Magazine</a>, <a href="http://www.ohiomagazine.com">Ohio
 			Magazine</a>, and other <a href="http://glpublishing.com">Great
-			Lakes Publishing</a> entities
+			Lakes Publishing</a> entities.
 		</li>
 		<li>
 			Implemented websites for <a href="http://www.guesthouseclevelandclinic.com/CCGH/ClevelandClinicGuesthouse.aspx">Cleveland Clinic Guesthouse</a>
-			and <a href="http://www.intercontinentalsuitescleveland.com/ISC/InterContinentalSuitesCleveland.aspx">InterContinental Suites Cleveland</a>
+			and <a href="http://www.intercontinentalsuitescleveland.com/ISC/InterContinentalSuitesCleveland.aspx">InterContinental Suites Cleveland</a>.
 		</li>
 	</ul>
 </div>
@@ -157,14 +157,14 @@
 		<a href="http://en.wikipedia.org/wiki/JavaScript" itemprop="itemListElement">JavaScript</a>,
 		<a href="http://wordpress.org" itemprop="itemListElement">WordPress</a>,
 		<a href="http://en.wikipedia.org/wiki/HTML5" itemprop="itemListElement">HTML5</a>,
-		&amp; <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" itemprop="itemListElement">CSS</a>
+		&amp; <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" itemprop="itemListElement">CSS</a>.
 	</li>
 	<li>
 		Built web applications using
 		<a href="https://www.djangoproject.com/" itemprop="itemListElement">Django</a>,
 		<a href="http://flask.pocoo.org/" itemprop="itemListElement">Flask</a>,
 		<a href="http://symfony.com/" itemprop="itemListElement">Symfony</a>,
-		&amp; <a href="http://www.yiiframework.com/" itemprop="itemListElement">Yii</a>
+		&amp; <a href="http://www.yiiframework.com/" itemprop="itemListElement">Yii</a>.
 	</li>
 	<li>
 		Most comfortable using
@@ -172,7 +172,7 @@
 		<a href="http://getbootstrap.com/" itemprop="itemListElement">Bootstrap</a>,
 		<a href="http://lesscss.org" itemprop="itemListElement">LESS</a>,
 		<a href="http://www.vim.org" itemprop="itemListElement">Vim</a>,
-		&amp; <a href="http://git-scm.com" itemprop="itemListElement">Git</a>
+		&amp; <a href="http://git-scm.com" itemprop="itemListElement">Git</a>.
 	</li>
 </ul>
 </div>
@@ -186,11 +186,11 @@
 	</li>
 	<li>
 		Developed website for the <a href="http://cantonfilm.com">Canton Film Festival</a>
-		using <a href="http://wordpress.org">WordPress</a>
+		using <a href="http://wordpress.org">WordPress</a>.
 	</li>
 	<li>
 		Earned the rank of <a href="https://en.wikipedia.org/wiki/Eagle_Scout">Eagle Scout</a>
-		in 2006 and loves to camp
+		in 2006 and loves to camp.
 	</li>
 </ul>
 
@@ -199,9 +199,9 @@
 <ul>
 	<li>
 		I spend much of my day tweaking my development workflow and reading
-		about the latest coding practices
+		about the latest coding practices.
 	</li>
 	<li>
-		Loves playing tennis and skateboarding
+		Loves playing tennis and skateboarding.
 	</li>
 </ul>
