Hardcodes some variables so the site compiles

--- a/public/_shared/footer.jade
+++ b/public/_shared/footer.jade
@@ -16,9 +16,9 @@ footer(role="contentinfo", class="footer")
 			a(href="https://goo.gl/vl1irv", itemprop="url")
 				span(itemprop="addressLocality") Brooklyn
 				| ,&nbsp;
-				span(itemprop="addressRegion") NY
+				abbr(itemprop="addressRegion", title="New York") NY
 				| ,&nbsp;
-				span(itemprop="addressCountry") USA
+				abbr(itemprop="addressCountry", title="United State of America") USA
 		div(class="web")
 			i(class="fa fa-globe", title="Web")
 				span(class="hidden") Web
