--- a/public/resume.ejs
+++ b/public/resume.ejs
@@ -11,7 +11,11 @@
 	</h3>
 	<h4 itemprop="jobTitle">Junior Engineer</h4>
 	<ul itemprop="description">
-		<li>Blah</li>
+		<li>
+			Built web applications using <a href="http://php.net">PHP</a> &amp;
+			<a href="http://www.python.org">Python</a> using various web
+			frameworks, including <a href="http://flask.pocoo.org">Flask</a>.
+		</li>
 	</ul>
 </div>
 
@@ -30,7 +34,7 @@
 			Architected <a href="https://landscape.itreetools.org">iTree Landscape</a>
 			using <a href="https://www.djangoproject.com">Django</a>, which uses
 			satellite images and various data sources to determine where trees
-			can be planted.
+			should be planted.
 		</li>
 	</ul>
 </div>
