--- a/public/_shared/disqus.ejs
+++ b/public/_shared/disqus.ejs
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
 <script>
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	var disqus_shortname = '<%= disqus %>'; // required: replace example with your forum shortname
+	var disqus_shortname = 'eligundry'; // required: replace example with your forum shortname
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
