Adds layouts and data for projects route

--- a/public/_shared/nav.jade
+++ b/public/_shared/nav.jade
@@ -1,5 +1,6 @@
 nav(role="navigation", class="top-nav")
 	a(href="/", rel="root") Home
 	a(href="/about") About
-	a(href="/blog") Blog
+	a(href="/projects/") Projects
+	a(href="/blog/") Blog
 	a(href="/resume") Resume
