--- a/public/assets/css/_footer.less
+++ b/public/assets/css/_footer.less
@@ -12,6 +12,8 @@
 
 		div {
 			float: left;
+			// Hardcoding this so elements don't shift on hover
+			height: 55px;
 			margin-right: 25px;
 		}
 
