--- a/public/assets/css/_variables.less
+++ b/public/assets/css/_variables.less
@@ -2,9 +2,9 @@
 //==============================================================================
 
 @columns: 12;
-@column-width: 95;
-@gutter-width: 0;
-@total-width: 70%;
+@column-width: 95px;
+@gutter-width: 30px;
+@total-width: 80%;
 
 // Colors
 //==============================================================================
