--- a/public/projects/_loop_layout.jade
+++ b/public/projects/_loop_layout.jade
@@ -2,20 +2,20 @@ doctype html
 html(lang="en-us")
 	head
 		meta(charset="utf-8")
-		if page_title
-			title #{ post_title } &mdash; #{ title }
+		if project_title
+			title #{ project_title } &mdash; #{ title }
 		else
 			title #{ title }
 		if description
 			meta(name="description", content=description)
+		else
+			meta(name="description", content=site_description)
 		!= partial("../_shared/meta")
-		link(rel="canonical", href="#{ root_url }/blog/#{ current.source }")
-	body(id=current.source, class="blog-loop", itemscope, itemtype="https://schema.org/Person")
+		link(rel="canonical", href="#{ root_url }/projects/#{ current.source }")
+	body(id=current.source, class="project-loop", itemscope, itemtype="https://schema.org/Person")
 		!= partial("../_shared/header")
 		!= partial("../_shared/nav")
-
-		main(role="main", itemscope, itemtype="http://schema.org/Blog")
+		main(role="main")
 			!= yield
-
 		!= partial("../_shared/footer")
 		!= partial("../_shared/scripts")
