--- a/public/projects/index.jade
+++ b/public/projects/index.jade
@@ -3,4 +3,5 @@ each project, slug in public.projects._data
 		article(itemprop="ItemList", itemscope, itemtype="http://schema.org/ItemList")
 			h2(itemprop="name")
 				a(href="/projects/#{ slug }", itemprop="url") #{ project.project_title }
+			img(src="#{ project.preview_image }")
 			p(itemprop="description") #{ project.excerpt }
