--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -11,6 +11,7 @@ html(lang="en-us")
 		else
 			meta(name="description", content=site_description)
 		!= partial("_shared/meta")
+		link(rel="canonical", href="#{ root_url }/#{ current.source }")
 	body(id=current.source, itemscope, itemtype="https://schema.org/Person")
 		!= partial("_shared/header")
 		!= partial("_shared/nav")
