--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: @sansFontFamily;
 }
 
+img {
+	max-width: 100%;
+}
+
 a {
 	color: @linkColor;
 	font-weight: bold;
@@ -197,6 +201,7 @@ blockquote {
 @import "about";
 @import "resume";
 @import "blog";
+@import "projects";
 
 // Responsive styling
 //==============================================================================
