--- a/public/blog/_layout.jade
+++ b/public/blog/_layout.jade
@@ -9,6 +9,7 @@ html(lang="en-us")
 		if excerpt
 			meta(name="description", content=excerpt)
 		!= partial("../_shared/meta")
+		link(rel="canonical", href="#{ root_url }/blog/#{ current.source }")
 	body(id=current.source, class="blog-post", itemscope, itemtype="https://schema.org/Person")
 		!= partial("../_shared/header")
 		!= partial("../_shared/nav")
