Adds js concat and minification

--- a/public/resume.ejs
+++ b/public/resume.ejs
@@ -150,10 +150,10 @@
 	</ul>
 </div>
 
-<div id="resume-skills" itemscope itemtype="http://schema.org/ItemList">
+<div id="resume-skills">
 <h2 itemprop="name">Skills</h2>
 
-<ul>
+<ul itemscope itemtype="http://schema.org/ItemList">
 	<li>
 		Develops using
 		<a href="http://www.python.org" itemprop="itemListElement">Python</a>,
