--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -1,6 +1,7 @@
 @import "_normalize";
 @import "_grid";
 @import "_variables";
+@import (less) "../../../node_modules/font-awesome/css/font-awesome.css";
 @import (less) "solarized-light.css";
 
 // General Element Styling
@@ -202,6 +203,7 @@ blockquote {
 @import "resume";
 @import "blog";
 @import "projects";
+@import "slides";
 
 // Responsive styling
 //==============================================================================
