--- a/templates/includes/disqus.html
+++ b/templates/includes/disqus.html
@@ -1,7 +1,6 @@
-<div id="disqus_thread"></div>
 <script>
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	var disqus_shortname = 'eligundry'; // required: replace example with your forum shortname
+  var disqus_shortname = '{{ config.DISQUS_SHORTNAME }}'; // required: replace example with your forum shortname
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
@@ -10,5 +9,3 @@
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
 </script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
