--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,7 @@
+{% extends 'layouts/main.html' %}
+{% block title %}{{ config.AUTHOR_NAME }}{% endblock %}
+
+{% block body %}
 <a class="twitter-timeline" href="https://twitter.com/EliGundry" data-widget-id="565180848564355073">Tweets by @EliGundry</a>
 <script>
 !function(d, s, id) {
@@ -11,3 +15,4 @@
     }
 }(document, "script", "twitter-wjs");
 </script>
+{% endblock %}
