Last commit before Lektor

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,6 +1,8 @@
 <header role="header">
-    <h1 itemprop="name">
-        <a href="/" rel="root">{{ config.AUTHOR_NAME }}</a>
-    </h1>
-    <h2 itemprop="description">{{ config.DESCRIPTION }}</h2>
+  <h1 itemprop="name">
+    <a href="/" rel="root">{{ config.AUTHOR_NAME }}</a>
+  </h1>
+  <h2 itemprop="description">{{ config.DESCRIPTION }}</h2>
 </header>
+
+{% include 'includes/nav.html' %}
