--- a/templates-old/includes/scripts.html
+++ b/templates-old/includes/scripts.html
@@ -1,4 +1,4 @@
-{# <script src="{{ url_for('static', filename='js/all.js') }}"></script> #}
+<script src="{{ url_for('static', filename='js/all.js') }}"></script>
 <script>
 	(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
 	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
