--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,11 +1,14 @@
 {% extends "layout.html" %}
-{% from "macros/blog.html" import render_blog_post %}
+{% from "macros/blog.html" import render_blog_post_preview %}
 {% from "macros/pagination.html" import render_pagination %}
 {% block title %}{{ this.title }}{% endblock %}
 {% block body %}
+{# @TODO Do this to the main element instead #}
+<div itemscope itemtype="http://schema.org/Blog">
   {% for child in this.pagination.items %}
-    {{ render_blog_post(child, from_index=true) }}
+    {{ render_blog_post_preview(child) }}
   {% endfor %}
+</div>
 
   {{ render_pagination(this.pagination) }}
 {% endblock %}
