Integrate webpack for static assets

--- a/templates/includes/stylesheets.html
+++ b/templates/includes/stylesheets.html
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/static/main.css">
+<link rel="stylesheet" href="{{ '/static/gen/styles.css'|asseturl }}">
