--- a/webpack/less/blog.less
+++ b/webpack/less/blog.less
@@ -1,6 +1,6 @@
 @import "_variables";
 
-.blog-loop article {
+.blog article {
 	h2 {
 		margin-bottom: 0;
 	}
@@ -10,8 +10,8 @@
 	}
 }
 
-.blog-post main,
-.blog-loop article {
+.blog main,
+.blog-post article {
 	time {
 		font-size: .8em;
 		font-weight: bold;
