Setup Pygments code highlighting

--- a/webpack/less/main.less
+++ b/webpack/less/main.less
@@ -1,7 +1,7 @@
 @import "_normalize";
 @import "_grid";
 @import "_variables";
-@import (less) "solarized-light.css";
+@import (less) "pygments-default.css";
 
 // General Element Styling
 //==============================================================================
