Switch google analytics over to Lektor's

--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -1,9 +1,2 @@
-{# <script src="{{ url_for('static', filename='js/all.js') }}"></script> #}
-<script>
-	(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-	e.src='//www.google-analytics.com/analytics.js';
-	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create',"{{ config.GOOGLE_ANALYTICS_CODE }}");ga('send','pageview');
-</script>
+<script src="{{ '/static/gen/app.js'|asseturl }}"></script>
+{{ generate_google_analytics() }}
