--- a/templates/includes/meta.html
+++ b/templates/includes/meta.html
@@ -4,6 +4,7 @@
 <link rel="dns-prefetch" href="//platform.twitter.com">
 <link rel="dns-prefetch" href="//www.google-analytics.com">
 <link rel="dns-prefetch" href="//eligundry.disqus.com">
-<link rel="author" href="{{ config.GOOGLE_PLUS_LINK }}">
-<link rel="href" href="/humans.txt">
+<link rel="author" href="{{ bag('author').google_plus }}">
+<link rel="humans" type="text/plain" href="/humans.txt">
+<link rel="sitemap" href="/sitemap.xml">
 <link rel="alternate" href="/feed.xml" type="application/rss+xml" title="RSS">
