Nuke old harp stuff

--- a/webpack/less/resume.less
+++ b/webpack/less/resume.less
@@ -22,6 +22,7 @@
         margin-top: .5em;
 
         sup {
+            margin-left: .6em;
             font-size: .6em;
             top: -.75em;
         }
