--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,10 +5,10 @@
 {% block body %}
 {# @TODO Do this to the main element instead #}
 <div itemscope itemtype="http://schema.org/Blog">
-  {% for child in this.pagination.items %}
+  {% for child in this.pagination.items.filter(F.draft == false) %}
     {{ render_blog_post_preview(child) }}
   {% endfor %}
 </div>
 
-  {{ render_pagination(this.pagination) }}
+{# {{ render_pagination(this.pagination) }} #}
 {% endblock %}
