Add canonical links

--- a/templates/includes/meta.html
+++ b/templates/includes/meta.html
@@ -8,3 +8,4 @@
 <link rel="humans" type="text/plain" href="/humans.txt">
 <link rel="sitemap" href="/sitemap.xml">
 <link rel="alternate" href="/feed.xml" type="application/rss+xml" title="RSS">
+<link rel="canonical" href="{{ this|url(external=true) }}">
