--- a/webpack/less/main.less
+++ b/webpack/less/main.less
@@ -28,12 +28,15 @@ a {
     font-weight: bold;
     text-decoration: none;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         border-bottom: @focusBorder;
         outline: @focusOutline;
     }
 
-    &:hover, &:focus, &:visited {
+    &:hover,
+    &:focus,
+    &:visited {
         color: @linkColor;
     }
 }
