Get the blog loop title working

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% from "macros/blog.html" import render_blog_post_preview %}
-{% from "macros/pagination.html" import render_pagination %}
+{# {% from "macros/pagination.html" import render_pagination %} #}
 {% block title %}{{ this.title }}{% endblock %}
 {% block body %}
 {# @TODO Do this to the main element instead #}
