--- a/templates/includes/meta.html
+++ b/templates/includes/meta.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="msapplication-navbutton-color" content="#f00">
+<meta name="generator" content="https://www.getlektor.com/">
 <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
 <link rel="dns-prefetch" href="//platform.twitter.com">
 <link rel="dns-prefetch" href="//www.google-analytics.com">
