Restore content and styles I had lost?

--- a/webpack/less/main.less
+++ b/webpack/less/main.less
@@ -190,6 +190,11 @@ blockquote {
     margin: 0 auto;
 }
 
+.print-show {
+    display: none;
+    visibility: hidden;
+}
+
 // Styling for blocks
 //==============================================================================
 
