--- a/webpack/less/print.less
+++ b/webpack/less/print.less
@@ -19,7 +19,7 @@
     }
 
     .print-show {
-        visibility: show;
+        visibility: visible;
     }
 
     .print-hide {
@@ -41,12 +41,16 @@
                     margin-top: 0;
                     width: 100%;
                 }
+
+                .resume-action {
+                    display: inline;
+                }
             }
         }
 
         .resume-hide {
-            visibility: hidden;
             display: none;
+            visibility: hidden;
         }
     }
 
