Get resume print button working.

--- a/webpack/less/print.less
+++ b/webpack/less/print.less
@@ -2,6 +2,7 @@
     body {
         width: 95%;
         font-size: 12px;
+        min-height: auto;
     }
 
     header {
@@ -78,4 +79,8 @@
             }
         }
     }
+
+     #lektor-edit-link {
+         display: none;
+     }
 }
