Add last.fm collage to the home page.

--- a/webpack/less/_variables.less
+++ b/webpack/less/_variables.less
@@ -1,10 +1,7 @@
 // Grid System
 //==============================================================================
 
-@columns: 12;
-@column-width: 95px;
-@gutter-width: 30px;
-@total-width: 70%;
+@total-width: 95%;
 
 // Colors
 //==============================================================================
@@ -25,6 +22,11 @@
 //==============================================================================
 @focusOutline: none;
 @focusBorder: 2px solid #f00;
+
+// Responsive
+//==============================================================================
+
+@mobile: ~"only screen and (max-width: 1025px)";
 
 // Misc.
 //==============================================================================
