Add a bunch of stuff.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,10 @@
     <title>{% block title %}Welcome{% endblock %} — Eli Gundry</title>
     <meta name="description" content="{{ this.description or bag('author').site_description }}">
     {% include 'includes/meta.html' %}
-    {% block stylesheets %}{% include 'includes/stylesheets.html' %}{% endblock %}
+    {% block stylesheets %}
+      <link rel="stylesheet" href="{{ '/static/gen/styles.css'|asseturl }}">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    {% endblock %}
   </head>
   <body id="{{ this.path }}" class="{{ this._model }}" itemscope itemtype="https://schema.org/Person">
     {% block header %}
