--- a/webpack/less/main.less
+++ b/webpack/less/main.less
@@ -209,6 +209,7 @@ blockquote {
 @import "resume";
 @import "blog";
 @import "projects";
+@import "presentation.less";
 
 // Responsive styling
 //==============================================================================
